--- a/Notes/Week6/week6.tex
+++ b/Notes/Week6/week6.tex
@@ -483,23 +483,32 @@
         \centering
         \footnotesize
         \begin{tikzpicture}
-            \draw [stealth-stealth] (-7.5,0) node[above right,yshift=1mm]{deactivators} -- (7.5,0) node[above left,yshift=1mm]{activators};
+            \draw [stealth-stealth] (-9.5,0) node[above right,yshift=1mm]{deactivators} -- (6.5,0) node[above left,yshift=1mm]{activators};
+    
             \draw
-                (-7,0.1) -- ++(0,-0.2) node[below]{\ce{{}^+NR3}}
-                (-6,0.1) -- ++(0,-0.2) node[below]{\ce{NO2}}
-                (-5,0.1) -- ++(0,-0.2) node[below]{\ce{CN}}
-                (-4,0.1) -- ++(0,-0.2) node[below]{\ce{SO3H}}
-                (-3,0.1) -- ++(0,-0.2) node[below]{\chemfig[atom sep=1.4em]{O=(-[:60])(-[:-60]R)}}
-                (-2,0.1) -- ++(0,-0.2) node[below]{\ce{CO2H}}
-                (-1,0.1) -- ++(0,-0.2) node[below]{\ce{CHO}}
+                (-9,0.1) -- ++(0,-0.2) node[below]{\ce{{}^+NR3}}
+                (-8,0.1) -- ++(0,-0.2) node[below]{\ce{NO2}}
+                (-7,0.1) -- ++(0,-0.2) node[below]{\ce{CN}}
+                (-6,0.1) -- ++(0,-0.2) node[below]{\ce{SO3H}}
+                (-5,0.1) -- ++(0,-0.2) node[below]{\chemfig[atom sep=1.4em]{O=(-[:60])(-[:-60]R)}}
+                (-4,0.1) -- ++(0,-0.2) node[below]{\ce{CO2H}}
+                (-3,0.1) -- ++(0,-0.2) node[below]{\ce{CHO}}
+                (-2.25,0.1) -- ++(0,-0.2) node[below]{\ce{F}}
+                (-1.75,0.1) -- ++(0,-0.2) node[below]{\ce{Cl}}
+                (-1.25,0.1) -- ++(0,-0.2) node[below]{\ce{Br}}
+                (-0.75,0.1) -- ++(0,-0.2) node[below]{\ce{I}}
                 (0,0.2) -- ++(0,-0.4) node[below]{\chemfig[atom sep=1.4em]{*6(-=-=-=)}}
-                (1.2,0.1) -- ++(0,-0.2) node[below]{aryl}
-                (2.4,0.1) -- ++(0,-0.2) node[below]{alkyl}
-                (3.6,0.1) -- ++(0,-0.2) node[below]{\chemfig[atom sep=1.4em]{HN-[:-60](=[::-60]O)-[::60]R}}
-                (4.8,0.1) -- ++(0,-0.2) node[below]{\ce{OR}}
-                (6,0.1) -- ++(0,-0.2) node[below]{\ce{OH}}
-                (7,0.1) -- ++(0,-0.2) node[below]{\ce{NH2}}
+                (1,0.1) -- ++(0,-0.2) node[below]{aryl}
+                (2,0.1) -- ++(0,-0.2) node[below]{alkyl}
+                (3,0.1) -- ++(0,-0.2) node[below]{\chemfig[atom sep=1.4em]{HN-[:-60](=[::-60]O)-[::60]R}}
+                (4,0.1) -- ++(0,-0.2) node[below]{\ce{OR}}
+                (5,0.1) -- ++(0,-0.2) node[below]{\ce{OH}}
+                (6,0.1) -- ++(0,-0.2) node[below]{\ce{NH2}}
             ;
+    
+            \draw [decorate,decoration={brace,mirror}] (-9.4,-1.5) -- node[below=1mm]{m-directing} (-2.6,-1.5);
+            \draw [decorate,decoration={brace,mirror}] (-2.4,-1.5) -- node[below=1mm]{o/p-directing} (-0.6,-1.5);
+            \draw [decorate,decoration={brace,mirror}] (0.6,-1.5) -- node[below=1mm]{o/p-directing} (6.4,-1.5);
         \end{tikzpicture}
         \caption{Activators and deactivators.}
         \label{fig:DeActivators}
@@ -515,6 +524,7 @@
             \item Ortho/para addition allows us to access a resonance structure where the carbocation intermediate is tertiary.
             \item For example, toluene is about 25 times more reactive than benzene, and it is even more reactive at the ortho/para positions.
         \end{itemize}
+        \item Halogens will be discussed next week.
     \end{itemize}
 \end{itemize}
 
