--- a/Notes/Week7/week7.tex
+++ b/Notes/Week7/week7.tex
@@ -33,5 +33,245 @@
 
 
 
+\section{Nucleophilic Aromatic Substitution}
+\begin{itemize}
+    \item \marginnote{2/22:}Office hours Wednesday/Thursday at 4:00 PM.
+    \item 1 page notes sheet for the exam next week.
+    \item Alkyl groups activate aromatic rings via induction.
+    \item Halogens.
+    \begin{itemize}
+        \item Electron-withdrawing due to induction.
+        \item Unlike alkyl groups, however, they have lone pairs that can contribute to resonance once the electrophile is added (i.e., in the carbocation intermediate).
+        \item Halogens with greater electronegativity are more strongly electron-withdrawing and thus more deactivating.
+    \end{itemize}
+    \item Two major problems:
+    \begin{enumerate}
+        \item Predicting the products based off of the substituents present on a ring.
+        \item Synthesizing a ring with multiple substituents on it (the order you add them matters!).
+    \end{enumerate}
+    \item Practice problem takeaways.
+    \begin{itemize}
+        \item When you have an ortho/para-directing substituent, you don't have to indicate major/minor products.
+        \item However, when doing a synthesis, try and make the reaction more selective by precluding one of the sites with another functional group. You could synthesize ortho/para products and then purify (throw away half of your yield), and while this is an acceptable answer, it is not the best answer when there are other options.
+        \item $t$-butyl groups generate significant steric hindrance, so groups will avoid adding ortho to them (even though $t$-butyl is an ortho/para-director by induction).
+        \item We will not see trick questions where something is so deactivating that we don't have a reaction; in these cases in reality, raising the temperature would suffice to force the reaction.
+        \item Resonance donation outcompetes induction donation.
+    \end{itemize}
+    \item Rules.
+    \begin{enumerate}
+        \item If all substituents direct to the same place, EAS happens there.
+        \item If not, the strongest \emph{activator} wins.
+        \begin{itemize}
+            \item This is because deactivators slow everything down (but just the meta site less) whereas activators specifically accelerate particular sites.
+        \end{itemize}
+        \item If one site is significantly more crowded than a second (out of two choices), sterics can play a role.
+        \begin{itemize}
+            \item You do need a really big $t$-butyl group (or something larger) though to see this effect.
+        \end{itemize}
+    \end{enumerate}
+    \item Synthesis practice problem.
+    \begin{itemize}
+        \item Benzene to 3-bromoaniline.
+        \item Preferentially use \ce{H2 + Pd/C} to form an amine from a nitro group. The others are less common.
+    \end{itemize}
+    \item \textbf{Nucleophilic aromatic substitution}. \emph{Also known as} \textbf{NAS}, \textbf{S\textsubscript{N}Ar}.
+    \item Reacting various aromatic compounds with methoxide and methanol.
+    \begin{itemize}
+        \item Chlorobenzene: No reaction.
+        \item para-chloronitrobenzene: The methoxide substitutes the chloride (at high temperatures).
+        \item 1-chloro-2,4-dinitrobenzene: The methoxide substitutes the chloride (much faster at lower temperatures).
+        \item meta-chloronitrobenzene: No reaction.
+    \end{itemize}
+    \item Mechanism.
+    \begin{figure}[h!]
+        \centering
+        \footnotesize
+        \schemestart
+            \chemfig{*6(-(-NO_2)=-@{C1b}=[@{db1}]@{C1a}(-Cl)-=)}
+            \arrow{->[\chemfig{@{Nu2}\charge{45:1pt=$\ominus$,90=\:}{Nu}}]}
+            \chemleft{[}
+                \subscheme{
+                    \chemfig{*6(-(-\charge{45:1pt=$\oplus$}{N}(=[:-150]O)(-[:-30]\charge{45:1pt=$\ominus$}{O}))=-@{C3}\charge{45:1pt=$\ominus$}{}-[@{sb3a}](-[:70]Nu)(-[@{sb3b}:110]@{Cl3}Cl)-=)}
+                    \arrow{<->}
+                    \chemname{\chemfig{*6(-(=\charge{45:1pt=$\oplus$}{N}(-[:-150]\charge{135:1pt=$\ominus$}{O})(-[:-30]\charge{45:1pt=$\ominus$}{O}))-=-(-[,2.5,,,white])(-[:70]Nu)(-[:110]Cl)-=)}}{Meisenheimer\\complex}
+                }
+            \chemright{]}
+            \arrow{->[][-\ce{Cl-}]}
+            \chemfig{*6(-(-NO_2)=-=(-Nu)-=)}
+        \schemestop
+        \chemmove{
+            \draw [rex,semithick,shorten <=6pt,shorten >=2pt] (Nu2) to[out=90,in=45,looseness=1.5] (C1a);
+            \draw [rex,semithick,shorten <=3pt,shorten >=3pt] (db1) to[bend right=90,looseness=4] (C1b);
+            \draw [rex,semithick,shorten <=10pt,shorten >=2pt] (C3) to[bend right=90,looseness=5] (sb3a);
+            \draw [rex,semithick,shorten <=2pt,shorten >=2pt] (sb3b) to[bend left=90,looseness=3] (Cl3);
+        }
+        \caption{Nucleophilic aromatic substitution mechanism.}
+        \label{fig:NASmechanism}
+    \end{figure}
+    \begin{itemize}
+        \item The driving force for the reaction is having the better leaving group leave.
+        \begin{itemize}
+            \item Between methoxide and chloride, for example, chloride is the better LG.
+        \end{itemize}
+        \item To form the Meisenheimer complex, you need a strongly electron-withdrawing group (such as a nitro group) or an intramolecular kinetic driving force.
+        \begin{itemize}
+            \item You also need the EWG in the right position to be able to accept electron density through resonance.
+        \end{itemize}
+    \end{itemize}
+    \item \textbf{Meisenheimer complex}: The intermediate with a double-bonded nitrogen in a nitrobenzene derivative undergoing S\textsubscript{N}Ar.
+    \begin{itemize}
+        \item Can be isolated at very low temperatures.
+    \end{itemize}
+    \item 1,2-dichloro-4-nitrobenzene becomes 2-chloro-1-methoxy-4-nitrobenzene due to the para-activation of the nitro group.
+    \item Reduction of aromatic compounds.
+    \begin{itemize}
+        \item Useful when you want to create a cyclohexane derivative --- you can put on functional groups with EAS and NAS, and then reduce at the end.
+    \end{itemize}
+    \item High pressure catalyzed.
+    \item General form.
+    \begin{center}
+        \footnotesize
+        \setchemfig{atom sep=1.4em}
+        \schemestart
+            \chemfig{*6(-=(-CH_3)-=(-CH_3)-=)}
+            \arrow{0}[,0]\+
+            3 \chemfig{H_2}
+            \arrow{->[\ce{Pt, Pd, Ru}][$>\num{1000}\,\text{psi}$]}[,1.5]
+            \chemfig{*6(--(-CH_3)--(-CH_3)--)}
+        \schemestop
+    \end{center}
+    \begin{itemize}
+        \item Only one of the listed transition metals is needed.
+        \item This is not practical because you don't want such high pressure bombs in the lab.
+    \end{itemize}
+    \item Birch reduction.
+    \item General form.
+    \begin{center}
+        \footnotesize
+        \setchemfig{atom sep=1.4em}
+        \schemestart
+            \chemfig{*6(-=-=-=)}
+            \arrow{->[\ce{2Li}][\ce{NH3 / EtOH}]}[,1.6]
+            \chemfig{*6(=--=--)}
+            \arrow{0}[,0]\+
+            2 \chemfig{LiOEt}
+        \schemestop
+    \end{center}
+    \begin{itemize}
+        \item Creates a singly-reduced, dearomatized system.
+        \item Sodium and potassium metals can also be used (in place of lithium).
+        \item This is similar to alkyne reduction.
+    \end{itemize}
+    \item Mechanism.
+    \begin{figure}[h!]
+        \centering
+        \footnotesize
+        \schemestart
+            \chemfig{*6(-@{C1b}=[@{db1b}]-[@{sb1}]=[@{db1a}]@{C1a}-=)}
+            \arrow{->[\chemfig{@{Li2}\charge{0=\.}{Li}}][-\ce{Li+}]}[,1.5]
+            \chemfig{*6(-@{C3}\charge{-45=\:,-135:3pt=$\ominus$}{}(-H)-=-\charge{45=\.}{}(-H)-=)}
+            \arrow{->[\chemfig{Et@{O4}O-[@{sb4}]@{H4}H}][-\ce{EtO-}]}[,1.5]
+            \chemfig{*6(-(-[:-70]H)(-[:-110]H)-=-@{C5}\charge{45=\.}{}(-H)-=-)}
+            \arrow{->[\chemfig{@{Li6}\charge{0=\.}{Li}}][-\ce{Li+}]}[,1.5]
+            \chemfig{*6(-(-[:-70]H)(-[:-110]H)-=-@{C7}\charge{45=\:,135:3pt=$\ominus$}{}(-H)-=)}
+            \arrow{->[\chemfig{Et@{O8}O-[@{sb8}]@{H8}H}][-\ce{EtO-}]}[,1.5]
+            \chemfig{*6(--=--=)}
+        \schemestop
+        \chemmove{
+            \draw [rex,semithick,shorten <=2pt,shorten >=2pt,arrows={-Stealth[harpoon,swap]}] ([xshift=3pt]Li2.east) to[bend right=60] (C1a);
+            \draw [rex,semithick,shorten <=4pt,shorten >=2pt] (db1a) to[bend right=60,looseness=2] (sb1);
+            \draw [rex,semithick,shorten <=4pt,shorten >=4pt] (db1b) to[bend right=90,looseness=4] (C1b);
+            \draw [rex,semithick,shorten <=6pt,shorten >=2pt] (C3) to[out=-45,in=120,out looseness=1.5,in looseness=3.5] (H4);
+            \draw [rex,semithick,shorten <=2pt,shorten >=2pt] (sb4) to[bend right=70,looseness=2.5] (O4);
+            \draw [rex,semithick,shorten <=2pt,shorten >=6pt,arrows={-Stealth[harpoon,swap]}] ([xshift=3pt]Li6.east) to[bend right=60] (C5);
+            \draw [rex,semithick,shorten <=6pt,shorten >=2pt] (C7) to[out=45,in=120,looseness=1.2] (H8);
+            \draw [rex,semithick,shorten <=2pt,shorten >=2pt] (sb8) to[bend right=70,looseness=2.5] (O8);
+        }
+        \caption{Birch reduction mechanism.}
+        \label{fig:Birchmechanism}
+    \end{figure}
+    \begin{itemize}
+        \item Although we draw the lithium radical directly attacking benzene, in reality, lithium gives up one of its electrons to become a cation, and this electron is solvated by \ce{NH3}.
+    \end{itemize}
+    \item One more reaction.
+    \item General form.
+    \begin{equation*}
+        \ce{PhBr ->[NaNH2][NH3] PhNH2}
+    \end{equation*}
+    \begin{itemize}
+        \item Also works with other alkali metals.
+    \end{itemize}
+    \item A radiolabeling study.
+    \begin{figure}[h!]
+        \centering
+        \footnotesize
+        \schemestart
+            \chemfig{*6(-(-[,,,,white]\phantom{Br})=-=@{C1}(-Br)-=)}
+            \arrow
+            \chemfig{*6(-(-[,,,,white]\phantom{N})=-=@{C2}(-NH_2)-=)}
+            \arrow{0}[,0]\+{1em,1em,0.5em}
+            \chemfig{*6(-=(-[,,,,white]\phantom{N})-(-NH_2)=@{C3}-=)}
+        \schemestop
+        \chemmove{
+            \fill [blx,opacity=0.3]
+                (C1) circle (2mm)
+                (C2) circle (2mm)
+                (C3) circle (2mm)
+            ;
+        }
+        \vspace{-3em}
+        \caption{Radiolabeling bromobenzene and transforming it into aniline.}
+        \label{fig:radiolabelBromobenzene}
+    \end{figure}
+    \begin{itemize}
+        \item When we radiolabel the carbon to which bromine is initially bonded, we see that two products are formed in equimolar ratios.
+        \item This means that something other than S\textsubscript{N}Ar is occurring, and that whatever is happening is proceeding through some sort of symmetric intermediate.
+    \end{itemize}
+    \item Mechanism.
+    \begin{figure}[h!]
+        \centering
+        \footnotesize
+        \begin{tikzpicture}
+            \node{
+                \chemnameinit{}
+                \schemestart
+                    \chemfig{*6(=-(-[@{sb1}]@{H1}H)=[@{db1}](-Br)-=-)}
+                    \arrow{->[\chemfig{@{N2}\charge{180=\:,90:3pt=$\ominus$}{N}H_2}][-\ce{NH3}]}
+                    \chemname[1em]{\chemfig{*6(=-@{C3b}~@{C3a}-(-[,,,,white])=-)}}{Benzyne}
+                \schemestop
+            };
+            \node at (6,1) {
+                \chemfig{*6(=-=(-NH_2)-=-)}
+            };
+            \node at (6,-1) {
+                \chemfig{*6(=-(-NH_2)=-=-)}
+            };
+    
+            \draw [-CF] (2.7,0) -- ++(1,0) -- ++(0,1) -- node[above]{\chemfig{@{N4}\charge{180=\:,90:3pt=$\ominus$}{N}H_2}} ++(1,0);
+            \draw [-CF] (3.7,0) -- ++(0,-1) -- node[below]{\chemfig{@{N5}\charge{180=\:,90:3pt=$\ominus$}{N}H_2}} ++(1,0);
+        \end{tikzpicture}
+        \chemmove{
+            \draw [rex,semithick,shorten <=6pt,shorten >=2pt] (N2) to[out=180,in=90,looseness=1.5] (H1);
+            \draw [rex,semithick,shorten <=2pt,shorten >=2pt] (sb1) to[bend right=60,looseness=1.5] (db1);
+            \draw [rex,semithick,shorten <=6pt,shorten >=2pt] (N4) to[out=180,in=60] (C3a);
+            \draw [rex,semithick,shorten <=6pt,shorten >=2pt] (N5) to[out=180,in=-60] (C3b);
+        }
+        \caption{Bromobenzene to aniline mechanism.}
+        \label{fig:PhBrtoPhNH2}
+    \end{figure}
+    \begin{itemize}
+        \item With a strong enough base, we can formally abstract a hydrogen from benzene to create an alkyne-like species.
+        \item Orbitally, we can picture the triple bond in benzyne as a weak interaction (weak because of the nonlinearity/intense angle strain) between adjacent $p$ orbitals in the molecular plane.
+    \end{itemize}
+    \item Applications of this reaction and further mechanistic evidence.
+    \begin{enumerate}
+        \item Using the strong base \ce{KNH2}, we can generate the benzyne intermediate and then trap it with other nucleophiles, leading to an equimolar mixture of products.
+        \item We can also trap benzyne by using it as the diene in a Diels-Alder reaction.
+        \item Lastly, we note that 2-bromo-1,3-dimethylbenzene does not react under these conditions, confirming the need for an $\alpha$-proton to make the benzyne intermediate.
+    \end{enumerate}
+\end{itemize}
+
+
+
 
 \end{document}
