--- a/Notes/Week6/week6.tex
+++ b/Notes/Week6/week6.tex
@@ -179,7 +179,7 @@
         \item We run through a bunch of use cases of EAS (putting different functional groups on an aromatic ring).
         \item Regioselectivity, reaction rates, etc. at the end of class.
     \end{itemize}
-    \item Sulfation.
+    \item Sulfonation.
     \item General form.
     \begin{equation*}
         \ce{PhH + SO3 ->[\text{cat.} H2SO4] PhSO3H}
@@ -212,8 +212,8 @@
             \draw [rex,semithick,shorten <=2pt,shorten >=2pt] (O4) to[out=-90,in=60] (H6);
             \draw [rex,semithick,shorten <=2pt,shorten >=2pt] (sb6a) to[bend right=70,looseness=2.5] (sb6b);
         }
-        \caption{EAS sulfation mechanism.}
-        \label{fig:EASsulfationMechanism}
+        \caption{EAS sulfonation mechanism.}
+        \label{fig:EASsulfonationMechanism}
     \end{figure}
     \begin{itemize}
         \item As with nitration (Figure \ref{fig:EASnitrationMechanism}), we use sulfuric acid to protonate a species that will then interact with benzene.
@@ -526,6 +526,50 @@
         \end{itemize}
         \item Halogens will be discussed next week.
     \end{itemize}
+\end{itemize}
+
+
+
+\section{Chapter 15: Reactions of Aromatic Compounds}
+\emph{From \textcite{bib:SolomonsEtAl}.}
+\begin{itemize}
+    \item \marginnote{2/23:}"Kekul\'{e} structures are more appropriate for writing mechanisms such as electrophilic aromatic substitution because they permit the use of resonance theory, which, as we shall soon see, is invaluable as an aid to our understanding" \parencite[663]{bib:SolomonsEtAl}.
+    \item Halogenation.
+    \item Bromination and chlorination of benzene are analogous (see Figure \ref{fig:EAShalogenationMechanism}).
+    \begin{itemize}
+        \item Flourination of benzene occurs so rapidly that it is hard to limit it to monofluorination. There are indirect methods of producing fluorobenzene, though.
+        \item Iodination of benzene requires incredibly forcing conditions, and is thus carried out in the presence of a strong oxidizing agent such as nitric acid. Biochemically, iodination of benzene is enzymatically catalyzed.
+    \end{itemize}
+    \item Sulfonation.
+    \item \textbf{Fuming sulfuric acid}: Sulfuric acid that contains added sulfur trioxide.
+    \item It is the reaction of benzene with fuming sulfuric acid that produces benzenesulfonic acid.
+    \begin{itemize}
+        \item Note that since \ce{H2SO4} partially decomposes into \ce{SO3} over time, the reaction will take place in the presence of concentrated sulfuric acid alone, but much more slowly.
+        \item The presence of \ce{SO3} is essential to the mechanism.
+    \end{itemize}
+    \item Sulfonation is reversible; the equilibrium depends on the conditions.
+    \begin{itemize}
+        \item Fuming sulfuric acid promotes sulfonation.
+        \item Dilute sulfuric acid with steam bubbled through (high $[\ce{H2O}]$) promotes desulfonation.
+    \end{itemize}
+    \item \textbf{Protecting group}: A functional group used to temporarily block a position from electrophilic aromatic substitution.
+    \item Since sulfonation is reversible, sulfonate is often used as a protecting group.
+    \item Friedel-Crafts alkylation.
+    \item For primary halides, an aluminum chloride-alkyl halide complex forms instead of a carbocation. In this case, the \ce{C-Cl} bond is all but broken, making the carbon atom positive to the point that it acts as if it were a carbocation, but there is still some connecting electron density.
+    \item Any process that creates a carbocation may be used as a precursor to F-C alkylation.
+    \begin{itemize}
+        \item A mixture of an alcohol and an acid (e.g., \ce{BF3}) can also be used.
+    \end{itemize}
+    \item Friedel-Crafts acylation.
+    \item \textbf{Acetyl group}: The \ce{MeCO} group. \emph{Also known as} \textbf{ethanoyl group}.
+    \item \textbf{Benzoyl group}: The \ce{PhCO} group.
+    \item \textbf{Acyl halide}. \emph{Also known as} \textbf{acid halide}.
+    \item Friedel-Crafts acylations can also be carried out using carboxylic acid anhydrides.
+    \item Additional limitation: "Aryl and vinylic halides cannot be used as the halide component because they do not form carbocations readily" \parencite[672]{bib:SolomonsEtAl}.
+    \item Side reaction with the Clemmensen reduction: Zinc and \ce{HCl} can also reduce nitro groups to amino groups.
+    \item \textbf{Wolf-Kishner reduction}: The basic complement of the Clemmensen reduction, which hydrogenates a ketone with hydrazine (\ce{H2NNH2}), \ce{KOH}, and heat.
+    \item \textbf{Arene}: A hydrocarbon that consists of both aliphatic and aromatic groups.
+    \item Covers side-chain reactions, stability, and transmutations.
 \end{itemize}
 
 
