Prof Office Hours 4

--- a/Notes/Week7/week7.tex
+++ b/Notes/Week7/week7.tex
@@ -396,5 +396,24 @@
 
 
 
+\section{Office Hours (Dickinson)}
+\begin{itemize}
+    \item Is the order of the deactivating halogens reversed?
+    \begin{itemize}
+        \item Yes --- fluorine should be the most deactivating. The way I have it drawn in Figure \ref{fig:DeActivators} is correct.
+    \end{itemize}
+    \item Why would the Clemmensen reduction work for reducing a nitro group to an amine --- isn't it for carbonyls?
+    \begin{itemize}
+        \item Don't get caught up on the name. The same reagents do the same thing in a few contexts; it's just using them to reduce ketones in particular that is termed the "Clemmensen reduction."
+    \end{itemize}
+    \item Electron flow in Figure \ref{fig:PhBrtoPhNH2}?
+    \item Sulfonation vs. sulfation?
+    \begin{itemize}
+        \item Would have to ask the IUPAC, but he could have it backwards. There probably isn't any issue though.
+    \end{itemize}
+\end{itemize}
+
+
+
 
 \end{document}
