Office Hours (Salinas)

--- a/Notes/Week7/week7.tex
+++ b/Notes/Week7/week7.tex
@@ -266,7 +266,7 @@
     \item Applications of this reaction and further mechanistic evidence.
     \begin{enumerate}
         \item Using the strong base \ce{KNH2}, we can generate the benzyne intermediate and then trap it with other nucleophiles, leading to an equimolar mixture of products.
-        \item We can also trap benzyne by using it as the diene in a Diels-Alder reaction.
+        \item We can also trap benzyne by using it as the dieneophile in a Diels-Alder reaction.
         \item Lastly, we note that 2-bromo-1,3-dimethylbenzene does not react under these conditions, confirming the need for an $\alpha$-proton to make the benzyne intermediate.
     \end{enumerate}
 \end{itemize}
